--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -66,7 +66,7 @@ img {
   overflow: hidden;
 }
 .container-xl {
-  width: 100%;
+  max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
 }
